--- a/web/index.html
+++ b/web/index.html
@@ -35,10 +35,11 @@
 </head>
 <body>
   <!-- Firebase SDKs for Web -->
+  <!-- Firebase SDKs for Web (Managed by FlutterFire) -->
+  <!-- 
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-messaging-compat.js"></script>
   
-  <!-- Initialize Firebase -->
   <script>
     const firebaseConfig = {
       apiKey: "AIzaSyAkakmS6sNZsX3wrpCozGE3xW9kf3-qX5c",
@@ -50,7 +51,8 @@
       measurementId: "G-0KV9EXTLFP"
     };
     firebase.initializeApp(firebaseConfig);
-  </script>
+  </script> 
+  -->
   
   <!-- Google Identity Services for Sign-In -->
   <script src="https://accounts.google.com/gsi/client" async defer></script>
